--- a/Day 1/Features/Login/style.css
+++ b/Day 1/Features/Login/style.css
@@ -8,17 +8,22 @@ body {
   height: 100%;
 
   box-sizing: border-box;
-  background-color: #264eca;
+  /* background-color: #264eca; */
 }
 
 .container {
   width: 100%;
   height: 100%;
   display: flex;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .box-form {
   width: 300px;
   margin: auto;
+  /* background-color: #fff; */
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  background-color: red;
 }
 .box-form__logo {
   margin-bottom: 70px;
